[gd_scene load_steps=19 format=3 uid="uid://cnwgdkcffpr6h"]

[ext_resource type="Script" uid="uid://c1s643k11wqpa" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://cp78m376rl80h" path="res://scripts/state.gd" id="2_g2els"]
[ext_resource type="Script" uid="uid://dceojyxsonpip" path="res://scripts/statemachine.gd" id="2_qhqgy"]
[ext_resource type="Script" uid="uid://b70orldahsmsg" path="res://scripts/playerstates/idle.gd" id="3_dqkch"]
[ext_resource type="Script" uid="uid://dw7rqjmuvms7w" path="res://scripts/playerstates/run.gd" id="5_tuyoq"]
[ext_resource type="Script" uid="uid://dxhllc1xdsfum" path="res://scripts/playerstates/jump.gd" id="6_fjrip"]
[ext_resource type="Script" uid="uid://httd88m282be" path="res://scripts/wallrun.gd" id="7_smehm"]
[ext_resource type="Script" uid="uid://5n1oiv0dfrlo" path="res://scripts/playerstates/slide.gd" id="8_y4r1p"]
[ext_resource type="Script" uid="uid://bj1xlp2d873db" path="res://scenes/canvas_layer.gd" id="9_ur7pv"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_u8vuu"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3vyb7"]

[sub_resource type="GDScript" id="GDScript_smehm"]
script/source = "extends State

@onready var anims: AnimationPlayer = $\"../../AnimationPlayer\"
@onready var ceiling_check: ShapeCast3D = $\"../../ceiling_check\"

@export var CROUCH_SPEED = 7
@export var CROUCH_MOVEMENT_SPEED = 3




func Enter():
	anims.play(\"crouch\", -1, CROUCH_SPEED)
	Global.player.max_speed = CROUCH_MOVEMENT_SPEED

func Physics_Update(_delta : float):
	
	if !Input.is_action_pressed(\"crouch\") and !ceiling_check.is_colliding():
		Transitioned.emit(self, \"run\")
	elif Input.is_action_pressed(\"jump\") and !ceiling_check.is_colliding():
		Transitioned.emit(self, \"jump\")

func Exit():
	anims.play(\"crouch\", -1, -CROUCH_SPEED, true)
"

[sub_resource type="Animation" id="Animation_y4r1p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("collision:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("collision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("camera_mount:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.7, 0)]
}

[sub_resource type="Animation" id="Animation_ur7pv"]
resource_name = "crouch"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("collision:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.31]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("collision:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.00266038, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.69, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("camera_mount:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.7, 0), Vector3(0, 0.86, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d2wvv"]
_data = {
&"RESET": SubResource("Animation_y4r1p"),
&"crouch": SubResource("Animation_ur7pv")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_ur7pv"]

[sub_resource type="Gradient" id="Gradient_ur7pv"]
offsets = PackedFloat32Array(0, 0.684028)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_y4r1p"]
gradient = SubResource("Gradient_ur7pv")

[node name="player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_3vyb7")
BASE_FOV = 90.0
max_charge = 100

[node name="meshes" type="Node3D" parent="."]

[node name="mesh" type="MeshInstance3D" parent="meshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_u8vuu")

[node name="collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_3vyb7")

[node name="camera_mount" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="raycast_right" type="RayCast3D" parent="camera_mount"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.274037, -1, 0)

[node name="raycast_rightbutt" type="RayCast3D" parent="camera_mount"]
transform = Transform3D(-2.43937e-08, -0.558064, -0.829798, 1, -4.37114e-08, 0, -3.62716e-08, -0.829798, 0.558064, 0.124313, -1, 0.280004)

[node name="raycast_leftbutt" type="RayCast3D" parent="camera_mount"]
transform = Transform3D(2.60005e-08, 0.594823, -0.803857, 1, -4.37114e-08, -2.51215e-15, -3.51377e-08, -0.803857, -0.594823, -0.0889443, -1, 0.305637)

[node name="raycast_left" type="RayCast3D" parent="camera_mount"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -0.349436, -1, 0)

[node name="camera_tilt" type="Node3D" parent="camera_mount"]

[node name="camera" type="Camera3D" parent="camera_mount/camera_tilt"]

[node name="weapon_mount" type="Node3D" parent="camera_mount/camera_tilt/camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.264968, -0.184417, -0.309966)

[node name="statemachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_qhqgy")
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="statemachine"]
script = ExtResource("3_dqkch")

[node name="walk" type="Node" parent="statemachine"]

[node name="run" type="Node" parent="statemachine"]
script = ExtResource("5_tuyoq")

[node name="jump" type="Node" parent="statemachine"]
script = ExtResource("6_fjrip")

[node name="crouch" type="Node" parent="statemachine"]
script = SubResource("GDScript_smehm")

[node name="slide" type="Node" parent="statemachine"]
script = ExtResource("8_y4r1p")

[node name="wallrun" type="Node" parent="statemachine"]
script = ExtResource("7_smehm")

[node name="State" type="Node" parent="statemachine"]
script = ExtResource("2_g2els")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d2wvv")
}

[node name="ceiling_check" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.604, 0)
shape = SubResource("SphereShape3D_ur7pv")
debug_shape_custom_color = Color(0, 1, 0, 1)

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="hurtbox" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1.01, 0, 0, 0, 1.01, 0, 0, 0, 1.01, 0, 0.855218, 0)
shape = SubResource("CapsuleShape3D_3vyb7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("9_ur7pv")

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = -30.0
offset_right = 191.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="Label" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 88.0
offset_top = 36.0
offset_right = 352.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.5
offset_right = 4.0
offset_bottom = 4.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_y4r1p")
expand_mode = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 268.0
offset_top = 161.0
offset_right = 579.0
offset_bottom = 188.0
step = 1.0

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
